--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.21",
     "@types/nodemailer": "^6.4.15",
+    "add": "^2.0.6",
     "ai": "^3.2.34",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "carousel": "^0.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
+    "embla-carousel-autoplay": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
     "lucide-react": "^0.414.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
@@ -34,6 +38,7 @@
     "react-email": "^2.1.5",
     "react-hook-form": "^7.52.1",
     "resend": "^3.4.0",
+    "shadcn-ui": "^0.9.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
